@@ -121,7 +121,7 @@ public class PointType extends CoordinateFieldType implements SpatialQueryable {
 
   @Override
   public void write(TextResponseWriter writer, String name, StorableField f) throws IOException {
-    writer.writeStr(name, f.stringValue(), false);
+    writer.writeStr(name, f.stringValue(), true);
   }
 
   @Override
